--- a/components/sections/Hero/Hero.module.css
+++ b/components/sections/Hero/Hero.module.css
@@ -17,7 +17,7 @@
   font-size: 0.625rem;
   letter-spacing: 0.3rem;
   text-transform: uppercase;
-  color: rgba(200, 180, 154, 0.4);
+  color: #fff;
 }
 
 .heading {
